plugins {
    id 'java' 
    id 'application' 
    id 'org.beryx.jlink' version '3.1.3'
} 
group = 'cz.aladalar.kyreng' 
version = '0.0.1-prototype' 
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

def os = org.gradle.internal.os.OperatingSystem.current() 
repositories {
    mavenCentral()
} 
dependencies {
    implementation 'uk.co.electronstudio.jaylib:jaylib:5.5.0-2'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'junit:junit:4.13.2'
}

application { mainClass = 'engine.Main' }

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }

/*jlink {
    options = [
        '--strip-debug','--compress','2','--no-header-files','--no-man-pages',
        '--add-modules','java.desktop,jdk.unsupported'
    ]

    launcher { name = 'KyrEng'; jvmArgs = [] }

    jpackage {
        imageName = 'KyrEng'
        appVersion = project.version
        vendor = 'Aladalar'
        installerType = os.isWindows() ? 'exe' : 'app-image'
    }

    // If you hit non‑modular lib issues, uncomment:
    // mergedModule { requires 'java.desktop'; requires 'jdk.unsupported' }
}*/